--- a/.github/workflows/main_minuevaaplicacion.yml
+++ b/.github/workflows/main_minuevaaplicacion.yml
@@ -6,6 +6,11 @@ on:
       - main
   workflow_dispatch:
 
+# 🔥 PERMISOS OBLIGATORIOS PARA LOGIN OIDC (FIX)
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
